parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    CASE
    CLASS
    NODE
    THEN

Grammar

Rule 0     S' -> instruction
Rule 1     instruction -> instructionBody
Rule 2     instruction -> defFunction
Rule 3     instruction -> blockFunction
Rule 4     instruction -> lambda_expression
Rule 5     defFunction -> DEF ID LPAREN parameters RPAREN instructionBody END
Rule 6     defFunction -> DEF ID LPAREN RPAREN END
Rule 7     defFunction -> DEF ID LPAREN RPAREN instructionBody END
Rule 8     defFunction -> DEF ID LPAREN RPAREN YIELD END
Rule 9     defFunction -> DEF ID LPAREN parameters RPAREN instructionBody YIELD END
Rule 10    lambda_expression -> LAMBDA LBRACE instructionBody RBRACE
Rule 11    lambda_expression -> ID ASSIGNMENT LAMBDA LBRACE instructionBody RBRACE
Rule 12    conditional -> IF condition instructionBody END
Rule 13    conditional -> IF condition instructionBody conditionalElsif END
Rule 14    conditional -> IF condition instructionBody ELSE instructionBody END
Rule 15    conditional -> IF condition instructionBody conditionalElsif ELSE instructionBody END
Rule 16    elsif -> ELSIF condition instructionBody
Rule 17    conditionalElsif -> elsif
Rule 18    conditionalElsif -> elsif conditionalElsif
Rule 19    whileLoop -> WHILE condition instructionBody END
Rule 20    forLoop -> FOR ID IN LPAREN INTEGER DOT DOT INTEGER RPAREN instructionBody END
Rule 21    assignmentRule -> ID ASSIGNMENT number
Rule 22    assignmentRule -> ID ASSIGNMENT ID
Rule 23    assignmentRule -> ID ASSIGNMENT condition
Rule 24    assignmentRule -> ID ASSIGNMENT TRUE
Rule 25    assignmentRule -> ID ASSIGNMENT FALSE
Rule 26    assignmentRule -> ID ASSIGNMENT creationTDA
Rule 27    assignmentRule -> ID ASSIGNMENT operations
Rule 28    assignmentRule -> ID ASSIGNMENT array
Rule 29    assignmentRule -> ID ASSIGNMENT indexation
Rule 30    assignmentRule -> ID ASSIGNMENT attribute
Rule 31    assignmentRule -> ID ASSIGNMENT input
Rule 32    bodyLine -> assignmentRule
Rule 33    bodyLine -> PRINT arguments
Rule 34    bodyLine -> conditional
Rule 35    bodyLine -> whileLoop
Rule 36    bodyLine -> functionCall
Rule 37    bodyLine -> arrayConcat
Rule 38    bodyLine -> RETURN arguments
Rule 39    bodyLine -> PUTS arguments
Rule 40    bodyLine -> method
Rule 41    bodyLine -> unaryOperator
Rule 42    bodyLine -> forLoop
Rule 43    instructionBody -> bodyLine
Rule 44    instructionBody -> bodyLine instructionBody
Rule 45    argument -> ID
Rule 46    argument -> number
Rule 47    argument -> attribute
Rule 48    argument -> indexation
Rule 49    argument -> STRING
Rule 50    argument -> TRUE
Rule 51    argument -> FALSE
Rule 52    argument -> functionCall
Rule 53    argument -> method
Rule 54    argument -> condition
Rule 55    arguments -> argument
Rule 56    arguments -> argument COMMA arguments
Rule 57    method -> ID DOT functionCall
Rule 58    input -> GETS DOT CHOMP DOT TO_F
Rule 59    input -> GETS DOT CHOMP DOT TO_I
Rule 60    input -> GETS DOT CHOMP
Rule 61    parameters -> ID
Rule 62    parameters -> ID COMMA parameters
Rule 63    functionCall -> ID LPAREN arguments RPAREN
Rule 64    functionCall -> ID LPAREN RPAREN
Rule 65    functionCall -> ID LPAREN RPAREN blockFunction
Rule 66    functionCall -> ID LPAREN arguments RPAREN blockFunction
Rule 67    blockFunction -> LBRACE instructionBody RBRACE
Rule 68    blockFunction -> DO instructionBody END
Rule 69    creationStack -> STACK DOT NEW
Rule 70    creationStack -> OPENBRACKET CLOSEDBRACKET
Rule 71    creationLinkedList -> LINKEDLIST DOT NEW
Rule 72    creationTDA -> creationStack
Rule 73    creationTDA -> creationLinkedList
Rule 74    creationTDA -> creationHashmap
Rule 75    creationHashmap -> HASH DOT NEW
Rule 76    creationHashmap -> LBRACE pairs RBRACE
Rule 77    creationHashmap -> LBRACE RBRACE
Rule 78    pair -> STRING COLON value
Rule 79    pairs -> pair
Rule 80    pairs -> pair COMMA pairs
Rule 81    value -> ID
Rule 82    value -> STRING
Rule 83    value -> number
Rule 84    value -> LBRACE pairs RBRACE
Rule 85    value -> LBRACE RBRACE
Rule 86    arithmeticOperator -> PLUS
Rule 87    arithmeticOperator -> MINUS
Rule 88    arithmeticOperator -> POWER
Rule 89    arithmeticOperator -> MULTIPLICATION
Rule 90    arithmeticOperator -> DIVISION
Rule 91    attribute -> ID DOT ID
Rule 92    operationValue -> ID
Rule 93    operationValue -> number
Rule 94    operationValue -> attribute
Rule 95    operationValue -> indexation
Rule 96    operation -> operationValue arithmeticOperator operationValue
Rule 97    operation -> LPAREN operationValue arithmeticOperator operationValue RPAREN
Rule 98    operations -> operation
Rule 99    operations -> operation arithmeticOperator operations
Rule 100   operations -> operation arithmeticOperator operationValue
Rule 101   operations -> operationValue arithmeticOperator operation
Rule 102   array -> OPENBRACKET element_list CLOSEDBRACKET
Rule 103   array -> OPENBRACKET CLOSEDBRACKET
Rule 104   element_list -> conditionValue
Rule 105   element_list -> element_list COMMA conditionValue
Rule 106   conditionValue -> ID
Rule 107   conditionValue -> number
Rule 108   conditionValue -> indexation
Rule 109   conditionValue -> attribute
Rule 110   arrayConcat -> ID ARRAYAPPEND ID
Rule 111   arrayConcat -> ID ARRAYAPPEND number
Rule 112   indexation -> ID OPENBRACKET element_list CLOSEDBRACKET
Rule 113   indexation -> ID OPENBRACKET operation CLOSEDBRACKET
Rule 114   condition -> conditionValue comparator conditionValue
Rule 115   comparator -> GREATERTHAN
Rule 116   comparator -> LESSTHAN
Rule 117   comparator -> EQUALS
Rule 118   comparator -> GREATEROREQUALS
Rule 119   comparator -> LESSOREQUALS
Rule 120   unaryOperator -> ID ASSIGNDECREMENT number
Rule 121   unaryOperator -> ID ASSIGNINCREMENT number
Rule 122   number -> FLOAT
Rule 123   number -> INTEGER

Terminals, with rules where they appear

AND                  : 
ARRAYAPPEND          : 110 111
ASSIGNDECREMENT      : 120
ASSIGNINCREMENT      : 121
ASSIGNMENT           : 11 21 22 23 24 25 26 27 28 29 30 31
BREAK                : 
CASE                 : 
CHOMP                : 58 59 60
CLASS                : 
CLOSEDBRACKET        : 70 102 103 112 113
COLON                : 78
COMMA                : 56 62 80 105
DEF                  : 5 6 7 8 9
DIVISION             : 90
DO                   : 68
DOT                  : 20 20 57 58 58 59 59 60 69 71 75 91
ELSE                 : 14 15
ELSIF                : 16
END                  : 5 6 7 8 9 12 13 14 15 19 20 68
EQUALS               : 117
FALSE                : 25 51
FLOAT                : 122
FOR                  : 20
GETS                 : 58 59 60
GREATEROREQUALS      : 118
GREATERTHAN          : 115
HASH                 : 75
ID                   : 5 6 7 8 9 11 20 21 22 22 23 24 25 26 27 28 29 30 31 45 57 61 62 63 64 65 66 81 91 91 92 106 110 110 111 112 113 120 121
IF                   : 12 13 14 15
IN                   : 20
INTEGER              : 20 20 123
LAMBDA               : 10 11
LBRACE               : 10 11 67 76 77 84 85
LESSOREQUALS         : 119
LESSTHAN             : 116
LINKEDLIST           : 71
LPAREN               : 5 6 7 8 9 20 63 64 65 66 97
MINUS                : 87
MULTIPLICATION       : 89
NEW                  : 69 71 75
NODE                 : 
OPENBRACKET          : 70 102 103 112 113
PLUS                 : 86
POWER                : 88
PRINT                : 33
PUTS                 : 39
RBRACE               : 10 11 67 76 77 84 85
RETURN               : 38
RPAREN               : 5 6 7 8 9 20 63 64 65 66 97
STACK                : 69
STRING               : 49 78 82
THEN                 : 
TO_F                 : 58
TO_I                 : 59
TRUE                 : 24 50
WHILE                : 19
YIELD                : 8 9
error                : 

Nonterminals, with rules where they appear

argument             : 55 56
arguments            : 33 38 39 56 63 66
arithmeticOperator   : 96 97 99 100 101
array                : 28
arrayConcat          : 37
assignmentRule       : 32
attribute            : 30 47 94 109
blockFunction        : 3 65 66
bodyLine             : 43 44
comparator           : 114
condition            : 12 13 14 15 16 19 23 54
conditionValue       : 104 105 114 114
conditional          : 34
conditionalElsif     : 13 15 18
creationHashmap      : 74
creationLinkedList   : 73
creationStack        : 72
creationTDA          : 26
defFunction          : 2
element_list         : 102 105 112
elsif                : 17 18
forLoop              : 42
functionCall         : 36 52 57
indexation           : 29 48 95 108
input                : 31
instruction          : 0
instructionBody      : 1 5 7 9 10 11 12 13 14 14 15 15 16 19 20 44 67 68
lambda_expression    : 4
method               : 40 53
number               : 21 46 83 93 107 111 120 121
operation            : 98 99 100 101 113
operationValue       : 96 96 97 97 100 101
operations           : 27 99
pair                 : 79 80
pairs                : 76 80 84
parameters           : 5 9 62
unaryOperator        : 41
value                : 78
whileLoop            : 35

Parsing method: LALR

state 0

    (0) S' -> . instruction
    (1) instruction -> . instructionBody
    (2) instruction -> . defFunction
    (3) instruction -> . blockFunction
    (4) instruction -> . lambda_expression
    (43) instructionBody -> . bodyLine
    (44) instructionBody -> . bodyLine instructionBody
    (5) defFunction -> . DEF ID LPAREN parameters RPAREN instructionBody END
    (6) defFunction -> . DEF ID LPAREN RPAREN END
    (7) defFunction -> . DEF ID LPAREN RPAREN instructionBody END
    (8) defFunction -> . DEF ID LPAREN RPAREN YIELD END
    (9) defFunction -> . DEF ID LPAREN parameters RPAREN instructionBody YIELD END
    (67) blockFunction -> . LBRACE instructionBody RBRACE
    (68) blockFunction -> . DO instructionBody END
    (10) lambda_expression -> . LAMBDA LBRACE instructionBody RBRACE
    (11) lambda_expression -> . ID ASSIGNMENT LAMBDA LBRACE instructionBody RBRACE
    (32) bodyLine -> . assignmentRule
    (33) bodyLine -> . PRINT arguments
    (34) bodyLine -> . conditional
    (35) bodyLine -> . whileLoop
    (36) bodyLine -> . functionCall
    (37) bodyLine -> . arrayConcat
    (38) bodyLine -> . RETURN arguments
    (39) bodyLine -> . PUTS arguments
    (40) bodyLine -> . method
    (41) bodyLine -> . unaryOperator
    (42) bodyLine -> . forLoop
    (21) assignmentRule -> . ID ASSIGNMENT number
    (22) assignmentRule -> . ID ASSIGNMENT ID
    (23) assignmentRule -> . ID ASSIGNMENT condition
    (24) assignmentRule -> . ID ASSIGNMENT TRUE
    (25) assignmentRule -> . ID ASSIGNMENT FALSE
    (26) assignmentRule -> . ID ASSIGNMENT creationTDA
    (27) assignmentRule -> . ID ASSIGNMENT operations
    (28) assignmentRule -> . ID ASSIGNMENT array
    (29) assignmentRule -> . ID ASSIGNMENT indexation
    (30) assignmentRule -> . ID ASSIGNMENT attribute
    (31) assignmentRule -> . ID ASSIGNMENT input
    (12) conditional -> . IF condition instructionBody END
    (13) conditional -> . IF condition instructionBody conditionalElsif END
    (14) conditional -> . IF condition instructionBody ELSE instructionBody END
    (15) conditional -> . IF condition instructionBody conditionalElsif ELSE instructionBody END
    (19) whileLoop -> . WHILE condition instructionBody END
    (63) functionCall -> . ID LPAREN arguments RPAREN
    (64) functionCall -> . ID LPAREN RPAREN
    (65) functionCall -> . ID LPAREN RPAREN blockFunction
    (66) functionCall -> . ID LPAREN arguments RPAREN blockFunction
    (110) arrayConcat -> . ID ARRAYAPPEND ID
    (111) arrayConcat -> . ID ARRAYAPPEND number
    (57) method -> . ID DOT functionCall
    (120) unaryOperator -> . ID ASSIGNDECREMENT number
    (121) unaryOperator -> . ID ASSIGNINCREMENT number
    (20) forLoop -> . FOR ID IN LPAREN INTEGER DOT DOT INTEGER RPAREN instructionBody END

    DEF             shift and go to state 7
    LBRACE          shift and go to state 9
    DO              shift and go to state 10
    LAMBDA          shift and go to state 11
    ID              shift and go to state 8
    PRINT           shift and go to state 13
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25

    instruction                    shift and go to state 1
    instructionBody                shift and go to state 2
    defFunction                    shift and go to state 3
    blockFunction                  shift and go to state 4
    lambda_expression              shift and go to state 5
    bodyLine                       shift and go to state 6
    assignmentRule                 shift and go to state 12
    conditional                    shift and go to state 14
    whileLoop                      shift and go to state 15
    functionCall                   shift and go to state 16
    arrayConcat                    shift and go to state 17
    method                         shift and go to state 20
    unaryOperator                  shift and go to state 21
    forLoop                        shift and go to state 22

state 1

    (0) S' -> instruction .



state 2

    (1) instruction -> instructionBody .

    $end            reduce using rule 1 (instruction -> instructionBody .)


state 3

    (2) instruction -> defFunction .

    $end            reduce using rule 2 (instruction -> defFunction .)


state 4

    (3) instruction -> blockFunction .

    $end            reduce using rule 3 (instruction -> blockFunction .)


state 5

    (4) instruction -> lambda_expression .

    $end            reduce using rule 4 (instruction -> lambda_expression .)


state 6

    (43) instructionBody -> bodyLine .
    (44) instructionBody -> bodyLine . instructionBody
    (43) instructionBody -> . bodyLine
    (44) instructionBody -> . bodyLine instructionBody
    (32) bodyLine -> . assignmentRule
    (33) bodyLine -> . PRINT arguments
    (34) bodyLine -> . conditional
    (35) bodyLine -> . whileLoop
    (36) bodyLine -> . functionCall
    (37) bodyLine -> . arrayConcat
    (38) bodyLine -> . RETURN arguments
    (39) bodyLine -> . PUTS arguments
    (40) bodyLine -> . method
    (41) bodyLine -> . unaryOperator
    (42) bodyLine -> . forLoop
    (21) assignmentRule -> . ID ASSIGNMENT number
    (22) assignmentRule -> . ID ASSIGNMENT ID
    (23) assignmentRule -> . ID ASSIGNMENT condition
    (24) assignmentRule -> . ID ASSIGNMENT TRUE
    (25) assignmentRule -> . ID ASSIGNMENT FALSE
    (26) assignmentRule -> . ID ASSIGNMENT creationTDA
    (27) assignmentRule -> . ID ASSIGNMENT operations
    (28) assignmentRule -> . ID ASSIGNMENT array
    (29) assignmentRule -> . ID ASSIGNMENT indexation
    (30) assignmentRule -> . ID ASSIGNMENT attribute
    (31) assignmentRule -> . ID ASSIGNMENT input
    (12) conditional -> . IF condition instructionBody END
    (13) conditional -> . IF condition instructionBody conditionalElsif END
    (14) conditional -> . IF condition instructionBody ELSE instructionBody END
    (15) conditional -> . IF condition instructionBody conditionalElsif ELSE instructionBody END
    (19) whileLoop -> . WHILE condition instructionBody END
    (63) functionCall -> . ID LPAREN arguments RPAREN
    (64) functionCall -> . ID LPAREN RPAREN
    (65) functionCall -> . ID LPAREN RPAREN blockFunction
    (66) functionCall -> . ID LPAREN arguments RPAREN blockFunction
    (110) arrayConcat -> . ID ARRAYAPPEND ID
    (111) arrayConcat -> . ID ARRAYAPPEND number
    (57) method -> . ID DOT functionCall
    (120) unaryOperator -> . ID ASSIGNDECREMENT number
    (121) unaryOperator -> . ID ASSIGNINCREMENT number
    (20) forLoop -> . FOR ID IN LPAREN INTEGER DOT DOT INTEGER RPAREN instructionBody END

    $end            reduce using rule 43 (instructionBody -> bodyLine .)
    RBRACE          reduce using rule 43 (instructionBody -> bodyLine .)
    END             reduce using rule 43 (instructionBody -> bodyLine .)
    ELSE            reduce using rule 43 (instructionBody -> bodyLine .)
    ELSIF           reduce using rule 43 (instructionBody -> bodyLine .)
    YIELD           reduce using rule 43 (instructionBody -> bodyLine .)
    PRINT           shift and go to state 13
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    ID              shift and go to state 27
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25

    bodyLine                       shift and go to state 6
    instructionBody                shift and go to state 26
    assignmentRule                 shift and go to state 12
    conditional                    shift and go to state 14
    whileLoop                      shift and go to state 15
    functionCall                   shift and go to state 16
    arrayConcat                    shift and go to state 17
    method                         shift and go to state 20
    unaryOperator                  shift and go to state 21
    forLoop                        shift and go to state 22

state 7

    (5) defFunction -> DEF . ID LPAREN parameters RPAREN instructionBody END
    (6) defFunction -> DEF . ID LPAREN RPAREN END
    (7) defFunction -> DEF . ID LPAREN RPAREN instructionBody END
    (8) defFunction -> DEF . ID LPAREN RPAREN YIELD END
    (9) defFunction -> DEF . ID LPAREN parameters RPAREN instructionBody YIELD END

    ID              shift and go to state 28


state 8

    (11) lambda_expression -> ID . ASSIGNMENT LAMBDA LBRACE instructionBody RBRACE
    (21) assignmentRule -> ID . ASSIGNMENT number
    (22) assignmentRule -> ID . ASSIGNMENT ID
    (23) assignmentRule -> ID . ASSIGNMENT condition
    (24) assignmentRule -> ID . ASSIGNMENT TRUE
    (25) assignmentRule -> ID . ASSIGNMENT FALSE
    (26) assignmentRule -> ID . ASSIGNMENT creationTDA
    (27) assignmentRule -> ID . ASSIGNMENT operations
    (28) assignmentRule -> ID . ASSIGNMENT array
    (29) assignmentRule -> ID . ASSIGNMENT indexation
    (30) assignmentRule -> ID . ASSIGNMENT attribute
    (31) assignmentRule -> ID . ASSIGNMENT input
    (63) functionCall -> ID . LPAREN arguments RPAREN
    (64) functionCall -> ID . LPAREN RPAREN
    (65) functionCall -> ID . LPAREN RPAREN blockFunction
    (66) functionCall -> ID . LPAREN arguments RPAREN blockFunction
    (110) arrayConcat -> ID . ARRAYAPPEND ID
    (111) arrayConcat -> ID . ARRAYAPPEND number
    (57) method -> ID . DOT functionCall
    (120) unaryOperator -> ID . ASSIGNDECREMENT number
    (121) unaryOperator -> ID . ASSIGNINCREMENT number

    ASSIGNMENT      shift and go to state 29
    LPAREN          shift and go to state 30
    ARRAYAPPEND     shift and go to state 31
    DOT             shift and go to state 32
    ASSIGNDECREMENT shift and go to state 33
    ASSIGNINCREMENT shift and go to state 34


state 9

    (67) blockFunction -> LBRACE . instructionBody RBRACE
    (43) instructionBody -> . bodyLine
    (44) instructionBody -> . bodyLine instructionBody
    (32) bodyLine -> . assignmentRule
    (33) bodyLine -> . PRINT arguments
    (34) bodyLine -> . conditional
    (35) bodyLine -> . whileLoop
    (36) bodyLine -> . functionCall
    (37) bodyLine -> . arrayConcat
    (38) bodyLine -> . RETURN arguments
    (39) bodyLine -> . PUTS arguments
    (40) bodyLine -> . method
    (41) bodyLine -> . unaryOperator
    (42) bodyLine -> . forLoop
    (21) assignmentRule -> . ID ASSIGNMENT number
    (22) assignmentRule -> . ID ASSIGNMENT ID
    (23) assignmentRule -> . ID ASSIGNMENT condition
    (24) assignmentRule -> . ID ASSIGNMENT TRUE
    (25) assignmentRule -> . ID ASSIGNMENT FALSE
    (26) assignmentRule -> . ID ASSIGNMENT creationTDA
    (27) assignmentRule -> . ID ASSIGNMENT operations
    (28) assignmentRule -> . ID ASSIGNMENT array
    (29) assignmentRule -> . ID ASSIGNMENT indexation
    (30) assignmentRule -> . ID ASSIGNMENT attribute
    (31) assignmentRule -> . ID ASSIGNMENT input
    (12) conditional -> . IF condition instructionBody END
    (13) conditional -> . IF condition instructionBody conditionalElsif END
    (14) conditional -> . IF condition instructionBody ELSE instructionBody END
    (15) conditional -> . IF condition instructionBody conditionalElsif ELSE instructionBody END
    (19) whileLoop -> . WHILE condition instructionBody END
    (63) functionCall -> . ID LPAREN arguments RPAREN
    (64) functionCall -> . ID LPAREN RPAREN
    (65) functionCall -> . ID LPAREN RPAREN blockFunction
    (66) functionCall -> . ID LPAREN arguments RPAREN blockFunction
    (110) arrayConcat -> . ID ARRAYAPPEND ID
    (111) arrayConcat -> . ID ARRAYAPPEND number
    (57) method -> . ID DOT functionCall
    (120) unaryOperator -> . ID ASSIGNDECREMENT number
    (121) unaryOperator -> . ID ASSIGNINCREMENT number
    (20) forLoop -> . FOR ID IN LPAREN INTEGER DOT DOT INTEGER RPAREN instructionBody END

    PRINT           shift and go to state 13
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    ID              shift and go to state 27
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25

    instructionBody                shift and go to state 35
    bodyLine                       shift and go to state 6
    assignmentRule                 shift and go to state 12
    conditional                    shift and go to state 14
    whileLoop                      shift and go to state 15
    functionCall                   shift and go to state 16
    arrayConcat                    shift and go to state 17
    method                         shift and go to state 20
    unaryOperator                  shift and go to state 21
    forLoop                        shift and go to state 22

state 10
